# advent-of-code

./: .gitignore  README.md
2023/: Cargo.toml
2023/day-01/: Cargo.toml
2023/day-01/src/: lib.rs  main.rs
2023/day-02/: Cargo.toml
2023/day-02/src/: main.rs
2023/day-03/: Cargo.toml
2023/day-03/src/: main.rs
2023/day-04/: Cargo.toml
2023/day-04/src/: main.rs
2023/day-05/: Cargo.toml
2023/day-05/src/: main.rs
2023/day-06/: Cargo.toml
2023/day-06/src/: main.rs
2023/day-07/: Cargo.toml
2023/day-07/src/: main.rs
2023/day-08/: Cargo.toml
2023/day-08/src/: main.rs
2023/day-09/: Cargo.toml
2023/day-09/src/: main.rs
2023/day-10/: Cargo.toml
2023/day-10/src/: main.rs
2023/day-11/: Cargo.toml
2023/day-11/src/: main.rs
2023/day-12/: Cargo.toml
2023/day-12/src/: main.rs
2023/day-13/: Cargo.toml
2023/day-13/src/: main.rs
2023/day-14/: Cargo.toml
2023/day-14/src/: lib.rs  main.rs
2023/day-15/: Cargo.toml
2023/day-15/src/: main.rs
2023/day-16/: Cargo.toml
2023/day-16/src/: lib.rs  main.rs
2023/day-17/: Cargo.toml
2023/day-17/src/: lib.rs  main.rs
2023/day-18/: Cargo.toml
2023/day-18/src/: lib.rs  main.rs
2023/day-19/: Cargo.toml
2023/day-19/src/: lib.rs  main.rs
2023/day-20/: Cargo.toml
2023/day-20/src/: lib.rs  main.rs
2024/: Cargo.toml  Makefile
2024/day-01/: Cargo.toml
2024/day-01/src/: main.rs
2024/day-02/: Cargo.toml
2024/day-02/src/: main.rs
2024/day-03/: Cargo.toml
2024/day-03/src/: main.rs
2024/template/: Cargo.toml
2024/template/src/: main.rs
