[package]
name = "day-03"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
itertools.workspace = true
pretty_env_logger.workspace = true
log.workspace = true
lazy_static = "1.4.0"
regex = "1.10.2"
